owlcms-docker/src/main/assembly/k8s/overlays/k3d-nocert/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: owlcms
  name: owlcms-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - host: o.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: owlcms-8080
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: publicresults
  name: publicresults-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - host: r.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: publicresults-8080
                port:
                  number: 8080
